figured out how to plot 1 day of absp vs time lol

--- a/Final paper/Riometer seasonal track/2013.ipynb
+++ b/Final paper/Riometer seasonal track/2013.ipynb
@@ -5,7 +5,7 @@
    "id": "9ad2872b-6876-47f4-881d-a4bc7f188071",
    "metadata": {},
    "source": [
-    "### Riometer read file"
+    "### Old riometer read file"
    ]
   },
   {
