--- a/Final paper/Riometer seasonal track/2012-2017.ipynb
+++ b/Final paper/Riometer seasonal track/2012-2017.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "43f33e3d-33d3-4ab8-841e-75dbfcc17363",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
     "            day = str(line_split[0].split(\"/\")[0])\n",
     "            year = \"20\" + str(line_split[0].split(\"/\")[2])\n",
     "                      \n",
-    "            full_date = month + day + year + str(line_split[1])\n",
+    "            full_date = day + month + year + str(line_split[1])\n",
     "            \n",
     "            # Try-except to see if can convert to datetime\n",
     "            try:\n",
