--- a/Final paper/Riometer seasonal track/rio readfile.ipynb
+++ b/Final paper/Riometer seasonal track/rio readfile.ipynb
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "db12bd03-f5a1-4036-9976-39a26330d822",
+   "execution_count": 5,
+   "id": "cc1176f2-0828-4e05-bc53-ed9b454cad25",
    "metadata": {
     "tags": []
    },
@@ -29,7 +29,7 @@
     "def rio_readfile(url):\n",
     "\n",
     "    # Define lists\n",
-    "    date = [] #do i even need the date cause it's the same year?\n",
+    "    #date = [] #do i even need the date cause it's the same year?\n",
     "    time = []\n",
     "    absorption = []\n",
     "    raw_sig = []\n",
@@ -72,19 +72,21 @@
     "            day = str(line_split[0].split(\"/\")[0])\n",
     "            year = \"20\" + str(line_split[0].split(\"/\")[2])\n",
     "                      \n",
-    "            full_date = month + day + year + str(line_split[1])\n",
+    "            # change this to dd mm yy!!!!!!!!!!!\n",
+    "            full_date = day + month + year + str(line_split[1])\n",
     "            \n",
     "            # Try-except to see if can convert to datetime\n",
     "            try:\n",
     "                res = bool(datetime.datetime.strptime(full_date, format))\n",
     "                this_time = datetime.datetime.strptime(full_date, format)\n",
     "\n",
-    "                # Only append line to list if time checks true\n",
-    "\n",
+    "                # Get rid of negative absorption values\n",
+    "                if float(line_split[2]) < 0:\n",
+    "                    continue\n",
     "                # append time to array\n",
     "                time.append(this_time)\n",
     "                # append absorption to array\n",
-    "                absorption.append(line_split[2])\n",
+    "                absorption.append(float(line_split[2]))\n",
     "                # append raw signals to array\n",
     "                raw_sig.append(line_split[3])\n",
     "\n",
@@ -99,16 +101,16 @@
     "            except ValueError:\n",
     "                res = False\n",
     "\n",
-    "    return sanitized_data\n",
-    "    '''print(\"length of time list\", len(time))\n",
-    "    print(\"length of absp list\", len(absorption))\n",
-    "    print(\"length of raw sig list\", len(raw_sig))'''"
+    "    #return sanitized_data\n",
+    "    return sanitized_data, time, absorption, raw_sig\n",
+    "    #return absorption\n",
+    "    #return raw_sig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad3c690-ec07-4c5d-b563-d24a0be6a3bf",
+   "id": "65a781a4-3bf8-4430-8027-1d1972da4b24",
    "metadata": {},
    "outputs": [],
    "source": []
