--- a/Final paper/Riometer seasonal track/Trends/Test plot type.ipynb
+++ b/Final paper/Riometer seasonal track/Trends/Test plot type.ipynb
@@ -5,6 +5,7 @@
    "execution_count": 1,
    "id": "656261ab-44b5-4037-9b5d-9d143abd59b0",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -87,8 +88,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95c074a1-88d5-48a4-94a1-3d2cd7ff431f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of second elements: 6.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average_of_second_elements(list_of_lists):\n",
+    "    total = 0\n",
+    "    count = 0\n",
+    "    for sublist in list_of_lists:\n",
+    "        if len(sublist) >= 2:\n",
+    "            total += sublist[1]\n",
+    "            count += 1\n",
+    "    if count == 0:\n",
+    "        return None  # Avoid division by zero\n",
+    "    return total / count\n",
+    "\n",
+    "# Example usage:\n",
+    "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11]]  # Example list of lists\n",
+    "avg = average_of_second_elements(list_of_lists)\n",
+    "print(\"Average of second elements:\", avg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf04561b-1881-446e-905c-3e175e1f934d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -110,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
